--- a/src/components/ui/sidebar/Sidebar.scss
+++ b/src/components/ui/sidebar/Sidebar.scss
@@ -8,12 +8,16 @@
     border-radius: 16px;
     position: relative;
     transition: width 0.3s ease;
-   
 
     &.dashboard {
         &:hover {
             width: 230px !important;
             position: absolute;
+            backdrop-filter: blur(8px);
+            /* Apply blur effect */
+            -webkit-backdrop-filter: blur(8px);
+
+            /* For Safari */
             a .label {
                 display: inline;
             }
@@ -28,13 +32,13 @@
         margin: 20px 0;
         position: relative;
         padding-left: 27px;
+
         img {
             margin-right: 10px;
         }
 
         .label {
             display: none;
-            /* Hide text labels by default */
             font-size: 14px;
             color: #000000;
             white-space: nowrap;
