--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -1,5 +1,3 @@
-// src/components/Layout.scss
-
 .layout-container {
     display: flex;
     position: relative;
@@ -15,6 +13,10 @@
     background: #FFFFFF;
     z-index: 1000;
     height: 72vh;
+
+    &:hover ~ .content.dashboard .outlet {
+        filter: blur(5px);
+    }
 }
 
 .content {
@@ -26,14 +28,12 @@
     .outlet {
         padding: 30px 40px 50px 150px;
         overflow: auto;
+        transition: filter 0.3s ease;
     }
 }
 
-
 @media only screen and (min-width: 1550px) {
     .sidebar {
-
         height: 82vh !important;
     }
-
 }
