--- a/src/components/ui/header/Header.scss
+++ b/src/components/ui/header/Header.scss
@@ -17,8 +17,8 @@
         list-style: none;
 
         li {
-            margin: 0 15px;
-
+            margin: 0 5px;
+            
             a {
                 text-decoration: none;
                 color: #000000;
@@ -28,11 +28,20 @@
                 font-weight: 500;
                 line-height: 22.5px;
                 text-align: left;
-
+               
                 &.active {
                     border-bottom: 5px solid #9867E9;
                     padding: 22px 0px;
                 }
+            }
+            &:first-child{
+                width: 60px !important;
+            }
+            &:nth-child(2),&:nth-child(4){
+                width: 170px !important;
+            }
+            &:nth-child(3){
+                width: 200px !important;
             }
         }
     }
