--- a/src/pages/(loggedIn)/approveGuests/ApproveGuests.scss
+++ b/src/pages/(loggedIn)/approveGuests/ApproveGuests.scss
@@ -32,7 +32,7 @@
             .actions-button {
                 img {
                     margin-right: 20px;
-                    cursor: pointer;
+                    cursor: pointer !important;
                 }
 
             }
