--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 body {
     margin: 0;
@@ -17,20 +18,32 @@ body {
     --backgroundColor: #F1E6F7;
     --LexendFontFamily: Lexend;
     --InterFontFamily: Inter;
+    --NunitoSansFontFamily: "Nunito Sans", sans-serif;
 }
 
 table {
     width: 100%;
+
     th,
     td {
-        font-size: 15px;
-        font-weight: 500;
-        line-height: 18.75px;
         text-align: start;
+        color: #000;
+        font-family: var(--LexendFontFamily);
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
     }
-    td{
+
+    td {
         padding-bottom: 10px;
         padding-top: 10px;
+        color: #4B4B4B;
+        font-family: var(--LexendFontFamily);
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
     }
 }
 
