--- a/src/pages/(loggedIn)/approveGuests/ApproveGuests.scss
+++ b/src/pages/(loggedIn)/approveGuests/ApproveGuests.scss
@@ -28,7 +28,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-
+            cursor: pointer !important;
             .actions-button {
                 img {
                     margin-right: 20px;
