--- a/src/pages/(loggedIn)/allocateRoom/AllocateRoom.scss
+++ b/src/pages/(loggedIn)/allocateRoom/AllocateRoom.scss
@@ -2,8 +2,10 @@
     display: flex;
     gap: 20px;
 
+
     .allocate-room {
-        width: 80%;
+
+        width: 75%;
 
         .tabs {
             display: flex;
@@ -124,6 +126,7 @@
                 font-weight: 500;
                 line-height: 22.5px;
                 cursor: pointer;
+
                 .active {
                     background-color: var(--primary-color);
                     color: white;
@@ -297,22 +300,23 @@
         }
     }
 
-    .user-details {
-        width: 20%;
+    .user-details-allocateRoom {
+        width: auto;
+        max-width: 500px;
         border: 1px solid #98A2AF;
         border-right: 0px;
         margin-top: -30px;
         border-radius: 14px 0px 0px 14px;
         flex: 1;
         margin-right: -40px !important;
-        padding: 20px;
+        padding: 20px 15px;
 
         .user-image {
             text-align: center;
 
             img {
-                width: 150px;
-                height: 150px;
+                width: 120px;
+                height: 120px;
             }
         }
 
@@ -364,7 +368,6 @@
     }
 }
 
-
 @media only screen and (max-width: 1300px) {
     .tab {
         padding: 20px 30px;
@@ -390,7 +393,7 @@
         }
     }
 
-    .user-details {
+    .user-details-allocateRoom {
         p {
             font-size: 15px !important;
             font-weight: 600;
@@ -406,19 +409,28 @@
     }
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (min-width: 1600px) {
 
-    .allocate-room-container {
-        display: flex;
-        gap: 20px;
-
-        .allocate-room {
-            width: 75% !important;
-        }
-
-        .user-details {
-            width: 25% !important;
-        }
+    .allocate-room {
+        width: 80% !important;
     }
+
+    .user-details-allocateRoom {
+        width: 20% !important;
+    }
+
+
+}
+
+@media only screen and (min-width: 2000px) {
+
+    .allocate-room {
+        width: 85% !important;
+    }
+
+    .user-details-allocateRoom {
+        width: 15% !important;
+    }
+
 
 }
