--- a/src/pages/applicationForm/ApplicationForm.scss
+++ b/src/pages/applicationForm/ApplicationForm.scss
@@ -3,6 +3,33 @@
 }
 
 .application-form {
+    padding: 30px 50px;
+
+    .application-form-section {
+        border-radius: 10px;
+        background: #FFF;
+        box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.25);
+        padding: 20px 30px;
+
+    }
+
+    .progress-bar-container {
+        width: 100%;
+        padding: 0px !important;
+        background-color: #e0e0e0;
+        height: 10px;
+        border-radius: 5px;
+        position: relative;
+        top: 11px;
+    }
+
+    .progress-bar {
+        height: 100%;
+        background-color: var(--primary-color);
+        border-radius: 5px;
+        transition: width 0.3s ease-in-out;
+    }
+
     h2 {
         color: var(--commonColor);
         color: #9867E9;
@@ -18,65 +45,6 @@
         display: flex;
         flex-direction: row;
         gap: 30px;
-
-        .form-left-section,
-        .form-right-section {
-            width: 50%;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-            display: flex;
-            flex-direction: column;
-
-
-            label {
-                margin-bottom: 5px;
-                color: #000;
-                font-family: var(--NunitoSansFontFamily);
-                font-size: 24px;
-                font-style: normal;
-                font-weight: 600;
-                line-height: normal;
-            }
-
-            input,
-            select,
-            button {
-                padding: 8px;
-                border: 1px solid #515151;
-                border-radius: 5px;
-                background: #FFF;
-                box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.123);
-                color: #515151;
-                font-family: var(--NunitoSansFontFamily);
-                font-size: 18px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: normal;
-            }
-
-            .aadhaar-section {
-                display: flex;
-
-                button {
-                    margin-left: 10px;
-                    background-color: #6C63FF;
-                    color: #fff;
-                    border: none;
-                    border-radius: 4px;
-                    cursor: pointer;
-                }
-            }
-
-            .upload-section {
-                p {
-                    margin-top: 10px;
-                    font-size: 12px;
-                    color: #888;
-                }
-            }
-        }
     }
 
     .tabs {
@@ -91,14 +59,133 @@
         }
     }
 
-    .submit-button {
-        padding: 10px 20px;
-        background-color: #6C63FF;
-        color: #fff;
-        border: none;
-        border-radius: 4px;
+
+}
+
+.form-left-section,
+.form-right-section {
+    width: 50%;
+}
+
+.form-group {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+
+
+    label {
+        margin-bottom: 5px;
+        color: #000;
+        font-family: var(--NunitoSansFontFamily);
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+    }
+
+    input,
+    select,
+    button {
+        padding: 8px;
+        border: 1px solid #515151;
+        border-radius: 5px;
+        background: #FFF;
+        box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.123);
+        color: #515151;
+        font-family: var(--NunitoSansFontFamily);
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    .aadhaar-section {
+        display: flex;
+
+        button {
+            margin-left: 10px;
+            background-color: #6C63FF;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+    }
+
+    .upload-section {
+        p {
+            margin-top: 10px;
+            font-size: 12px;
+            color: #888;
+        }
+    }
+}
+
+.tab-content {
+    padding-top: 10px;
+    border: 1px solid #B6C2D3;
+
+    padding: 30px 20px;
+    border-radius: 0px 15px 15px 15px;
+}
+
+.VisitDetails,
+.tab-content {
+    display: flex;
+    gap: 30px;
+}
+
+.file-upload-section {
+    margin-left: 100px;
+
+    .upload-container {
+        width: 100%;
+        max-width: 100%;
+        height: 110px;
+        border: 1px solid #515151;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        cursor: pointer;
+        margin: 0 auto;
+
+    }
+
+    .upload-label {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
         cursor: pointer;
     }
+
+    .upload-icon {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .upload-text {
+        font-size: 16px;
+        color: #555;
+    }
+
+    .upload-subtext {
+        font-size: 12px;
+        color: #888;
+    }
+
+    .upload-container:hover {
+        border-color: #888;
+    }
+
+    .upload-container.dragover {
+        border-color: #555;
+    }
+
 }
 
 .error {
@@ -137,4 +224,10 @@
         }
     }
 
+}
+
+.submit-button {
+    text-align: right;
+    margin-top: 40px;
+    cursor: pointer;
 }
