--- a/src/pages/(loggedIn)/dashboard/Dashboard.scss
+++ b/src/pages/(loggedIn)/dashboard/Dashboard.scss
@@ -69,6 +69,7 @@
         .Request,
         .allocate-rooms {
 
+            cursor: pointer;
 
             .request-status {
                 margin-top: -15px;
@@ -112,12 +113,13 @@
             .check-in,
             .check-out {
                 width: 100%;
-
+                cursor: pointer;
             }
         }
 
         .room-seats {
             padding-bottom: 30px;
+
             .room-status-main-section {
                 display: flex;
                 justify-content: space-between;
