--- a/src/pages/(loggedIn)/approveGuests/ApproveGuests.scss
+++ b/src/pages/(loggedIn)/approveGuests/ApproveGuests.scss
@@ -9,6 +9,30 @@
             font-weight: 500;
             margin-top: 0px !important;
         }
+
+        .toggleGridView {
+            background: #DEE4ED;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 70px;
+            height: 35px;
+            flex-shrink: 0;
+            border-radius: 5px;
+
+            img {
+                padding: 9px 11px;
+                border-radius: 5px;
+            }
+
+            &:first-child {
+                padding-left: 5px;
+            }
+
+            &:nth-child(1) {
+                padding-right: 5px;
+            }
+        }
     }
 
     .requests-cards-section {
@@ -29,6 +53,7 @@
             flex-direction: column;
             justify-content: space-between;
             cursor: pointer !important;
+
             .actions-button {
                 img {
                     margin-right: 20px;
