--- a/src/pages/(loggedIn)/requests/Requests.scss
+++ b/src/pages/(loggedIn)/requests/Requests.scss
@@ -32,7 +32,60 @@
             padding-right: 5px;
         }
     }
+
+    /* Custom styles for the datepicker input */
+    .react-datepicker-wrapper {
+        width: 100%;
+    }
+
+    .react-datepicker__input-container input {
+        border: 1px solid #98A2AF;
+        padding: 10px 15px;
+        font-size: 16px;
+        border-radius: 5px;
+        width: 200px;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+        font-family: var(--LexendFontFamily);
+    }
+
+    /* Customize the calendar popover */
+    .react-datepicker {
+        border: 1px solid #98A2AF;
+        /* Customize calendar border */
+        border-radius: 5px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        padding: 0px;
+        font-family: var(--LexendFontFamily);
+    }
+
+    /* Customize the header of the calendar */
+    .react-datepicker__header {
+        background-color: #f0f0f0;
+        border-bottom: 1px solid #98A2AF;
+        padding-bottom: 10px;
+        
+    }
+
+    /* Customize the days */
+    .react-datepicker__day--selected {
+        background-color: gray;
+        /* Use your primary color */
+        color: white;
+    }
+    .react-datepicker__day {
+        padding: 5px;
+    }
+
+    .react-datepicker__day--today {
+        background-color: var(--primary-color);
+        border-radius: 50%;
+        color: #FFF;
+        border: none;
+    }
+
+
 }
+
 
 
 .tabs-container {
@@ -49,7 +102,7 @@
     margin-right: 1rem;
     cursor: pointer;
     padding: 15px 30px;
-   
+
     // border-bottom: 2px solid transparent;
 }
 
