Worked on dashboard and requests

--- a/src/pages/(loggedIn)/checkInDetails/CheckInDetails.scss
+++ b/src/pages/(loggedIn)/checkInDetails/CheckInDetails.scss
@@ -1,17 +1,15 @@
 .check-in-main-container {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: auto auto;
     gap: 30px;
-    background-color: #FFFFFF;
 
     .check-in-datails,
     .scanned-qr-main-section {
         border: 1px solid #B6C2D3;
         border-radius: 24px;
-        width: 50%;
-        height: 795px;
-
-
+        max-width: 100%;
+        min-height: 400px;
+        // height: 795px;
     }
 
     .check-in-datails {
