--- a/src/pages/(loggedIn)/dashboard/Dashboard.scss
+++ b/src/pages/(loggedIn)/dashboard/Dashboard.scss
@@ -62,6 +62,7 @@
 
                 .status-list {
                     padding-top: 20px;
+                    text-transform: capitalize;
                 }
             }
         }
