--- a/src/pages/applicationForm/applicationTabs/applicationDetails/ApplicationDetails.scss
+++ b/src/pages/applicationForm/applicationTabs/applicationDetails/ApplicationDetails.scss
@@ -1,175 +1,160 @@
 .application-form {
-   
-    border-radius: 10px;
-    background: #FFF;
+  border-radius: 10px;
+  background: #fff;
 
-    .progress-bar-container {
-        width: 100%;
-        padding: 0px !important;
-        background-color: #e0e0e0;
-        height: 10px;
-        border-radius: 5px;
+  .progress-bar-container {
+    width: 100%;
+    padding: 0px !important;
+    background-color: #e0e0e0;
+    height: 10px;
+    border-radius: 5px;
+  }
 
+  .progress-bar {
+    height: 100%;
+    background-color: var(--primary-color);
+    border-radius: 5px;
+    transition: width 0.3s ease-in-out;
+  }
 
+  h2 {
+    color: var(--commonColor);
+    color: #9867e9;
+    font-family: var(--NunitoSansFontFamily);
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+  }
+
+  .form-tabs {
+    padding-top: 20px;
+    list-style: none;
+
+    li {
+      padding-right: 40px;
+      color: var(--Text-Primary, #1a212b);
+
+      /* Label/Large */
+      font-family: Lexend;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 24px;
+      display: inline-block;
     }
 
-    .progress-bar {
-        height: 100%;
-        background-color: var(--primary-color);
-        border-radius: 5px;
-        transition: width 0.3s ease-in-out;
+    .form-tabs ul {
+      list-style: none;
+      padding: 0;
+      border: none !important;
     }
 
-    h2 {
-        color: var(--commonColor);
-        color: #9867E9;
-        font-family: var(--NunitoSansFontFamily);
-        font-size: 30px;
-        font-style: normal;
-        font-weight: 800;
-        line-height: normal;
+    .tab-item {
+      padding: 10px;
+      cursor: pointer;
+      font-size: 16px;
+      border: none !important;
     }
 
-
-
-    .form-tabs {
-        padding-top: 20px;
-        list-style: none;
-
-        li {
-            padding-right: 40px;
-            color: var(--Text-Primary, #1A212B);
-
-            /* Label/Large */
-            font-family: Lexend;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: 24px;
-            display: inline-block;
-        }
-
-        .form-tabs ul {
-            list-style: none;
-            padding: 0;
-            border: none !important;
-
-
-        }
-
-        .tab-item {
-            padding: 10px;
-            cursor: pointer;
-            font-size: 16px;
-            border: none !important;
-        }
-
-        .tab-item .tabIndex {
-            display: inline-block;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            background-color: #ddd;
-            text-align: center;
-            line-height: 30px;
-            margin-right: 10px;
-            font-weight: bold;
-        }
-
-        .tab-item.active .tabIndex {
-            background-color: var(--primary-color);
-            color: #FFF;
-        }
-
-        .tab-item.active {
-            color: var(--primary-color);
-            /* Green text for active tabName */
-        }
-
-
+    .tab-item .tabIndex {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-color: #ddd;
+      text-align: center;
+      line-height: 30px;
+      margin-right: 10px;
+      font-weight: bold;
     }
 
-    .form-section {
-        margin-bottom: 20px;
-        display: flex;
-        flex-direction: row;
-        gap: 30px;
-
+    .tab-item.active .tabIndex {
+      background-color: var(--primary-color);
+      color: #fff;
     }
 
-    .tabs {
-        display: flex;
-
-        button {
-            flex: 1;
-            padding: 10px;
-            background-color: #f2f2f2;
-            border: 1px solid #ccc;
-            cursor: pointer;
-        }
+    .tab-item.active {
+      color: var(--primary-color);
+      /* Green text for active tabName */
     }
+  }
 
+  .form-section {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+  }
 
+  .tabs {
+    display: flex;
+
+    button {
+      flex: 1;
+      padding: 10px;
+      background-color: #f2f2f2;
+      border: 1px solid #ccc;
+      cursor: pointer;
+    }
+  }
 }
-
-
 
 .form-left-section,
 .form-right-section {
-    width: 50%;
+  width: 50%;
 }
 
 .form-group {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+
+  label {
+    margin-bottom: 5px;
+    color: #000;
+    font-family: var(--NunitoSansFontFamily);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+
+  input,
+  textarea,
+  select,
+  button {
+    padding: 8px;
+    border: 1px solid #515151;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.123);
+    color: #515151;
+    font-family: var(--NunitoSansFontFamily);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .aadhaar-section {
     display: flex;
-    flex-direction: column;
 
-
-    label {
-        margin-bottom: 5px;
-        color: #000;
-        font-family: var(--NunitoSansFontFamily);
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-    }
-
-    input,
-    textarea,
-    select,
     button {
-        padding: 8px;
-        border: 1px solid #515151;
-        border-radius: 5px;
-        background: #FFF;
-        box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.123);
-        color: #515151;
-        font-family: var(--NunitoSansFontFamily);
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
+      margin-left: 10px;
+      background-color: #6c63ff;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
     }
+  }
 
-    .aadhaar-section {
-        display: flex;
-
-        button {
-            margin-left: 10px;
-            background-color: #6C63FF;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
+  .upload-section {
+    p {
+      margin-top: 10px;
+      font-size: 12px;
+      color: #888;
     }
-
-    .upload-section {
-        p {
-            margin-top: 10px;
-            font-size: 12px;
-            color: #888;
-        }
-    }
+  }
 }
